--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <li>
                 <a class="tooltip-side-nav" href="#section-1" title="" data-original-title="Intro" data-placement="left"></a>
             </li>
-            <li>
+            <!-- <li>
                 <a class="tooltip-side-nav" href="#section-2" title="" data-original-title="Works" data-placement="left"></a>
-            </li>
+            </li> -->
             <!-- <li>
                 <a class="tooltip-side-nav" href="#section-3" title="" data-original-title="Subscribe" data-placement="left"></a>
             </li> -->
@@ -259,8 +259,8 @@
 
 
 
-    <!-- Features -->
-    <section class="features-section" id="section-2">
+
+    <!-- <section class="features-section" id="section-2">
 
         <div class="container">
 
@@ -268,20 +268,20 @@
 
                 <div class="col-md-5 col-features text-center">
 
-                    <!-- Images showcase -->
+
                     <figure>
                         <img class="img-iPhone" src="images/iphone/1.png" alt="">
                     </figure>
 
                 </div>
-                <!-- /.col-md-5 -->
+
 
                 <div class="col-md-7 col-features features-content">
 
-                    <!-- Title -->
+
                     <h3 id="title-1">First title features</h3>
 
-                    <!-- Description -->
+
                     <p>Omnis, esse quo natus soluta minima facilis ratione dignissimos necessitatibus quod dolorem labore molestiae maxime veritatis laudantium aut odio ullam laboriosam autem!</p>
 
                     <p>
@@ -289,10 +289,10 @@
                     </p>
 
                 </div>
-                <!-- /.col-md-7 -->
+
 
             </div>
-            <!-- /.row -->
+
 
 
 
@@ -301,10 +301,10 @@
 
                 <div class="col-md-7 col-features features-content">
 
-                    <!-- Title -->
+
                     <h3 id="title-2">Second title features</h3>
 
-                    <!-- Description -->
+
                     <p>Omnis, esse quo natus soluta minima facilis ratione dignissimos necessitatibus quod dolorem labore molestiae maxime veritatis laudantium aut odio ullam laboriosam autem!</p>
 
                     <p>
@@ -313,20 +313,20 @@
                     </p>
 
                 </div>
-                <!-- /.col-md-7 -->
+
 
                 <div class="col-md-5 col-features text-center">
 
-                    <!-- Images showcase -->
+
                     <figure>
                         <img class="img-iPhone margin-top margin-screen-800" src="images/iphone/4.png" alt="">
                     </figure>
 
                 </div>
-                <!-- /.col-md-5 -->
+
 
             </div>
-            <!-- /.row -->
+
 
 
 
@@ -335,41 +335,41 @@
 
                 <div class="col-md-5 col-features text-center">
 
-                    <!-- Images showcase -->
+
                     <figure>
                         <img class="img-iPhone margin-top margin-top-1" src="images/iphone/3.png" alt="">
                     </figure>
 
                 </div>
-                <!-- /.col-md-5 -->
+
 
                 <div class="col-md-7 col-features features-content">
 
-                    <!-- Title -->
+
                     <h3 id="title-3">Third title features</h3>
 
-                    <!-- Description -->
+
                     <p>Omnis, esse quo natus soluta minima facilis ratione dignissimos necessitatibus quod dolorem labore molestiae maxime veritatis laudantium aut odio ullam laboriosam autem!</p>
 
-                    <!-- Button -->
+
                     <p class="btn-app-store">
                         <a class="btn btn-danger btn-lg" href="#fakelinks">
                             <img src="images/btn-app-store.png" alt="">
                         </a>
                     </p>
-                    <!-- /.btn-app-store -->
+
 
                 </div>
-                <!-- /.col-md-7 -->
+
 
             </div>
-            <!-- /.row -->
+
 
         </div>
-        <!-- /.container -->
+
 
     </section>
-    <!-- /.features-section -->
+     -->
 
 
 
@@ -382,46 +382,14 @@
             <div class="row">
 
                 <div class="col-md-12">
+                    <div class="subscribe_link">
+                        <!-- <a class="link link--nukun">To <span>be</span> continue</a> -->
 
-                    <!-- Title -->
-                    <h2>Subscribe to get delightfully infrequent updates</h2>
-
-                    <!-- Subscribe form -->
-                    <div class="row">
-
-                        <div class="col-md-6 col-md-offset-3 col-subscribe">
-
-                            <form class="subscribe-form form-inline" action="./index.html" role="form">
-
-                                <!-- Input -->
-                                <div class="form-group">
-
-                                    <label class="sr-only" for="exampleInputEmail1">Email address</label>
-                                    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email address">
-
-                                </div>
-                                <!-- /.form-group -->
-
-                                <!-- Button -->
-                                <button class="btn btn-success" type="submit">Subscribe</button>
-
-                            </form>
-                            <!-- /.subscribe-form -->
-
-
-
-                            <section class="subscribe-description">
-
-                                <p>Don't worry. We do not spam :)</p>
-
-                            </section>
-                            <!-- /.subscribe-description -->
-
-                        </div>
-                        <!-- /.col-md-6 -->
-
+                        <a class="link link--yaku" href="#">
+                					<span>To&nbsp</span><span>be&nbsp</span><span>Continue</span>
+                				</a>
                     </div>
-                    <!-- /.row -->
+
 
                 </div>
                 <!-- /.col-md-12 -->
@@ -449,7 +417,7 @@
 
                     <!-- Footer 1 -->
                     <section>
-                        <p>Be a excellent Coder <i class="fa fa-leaf"></i></p>
+                        <p>Be an excellent Coder <i class="fa fa-leaf"></i></p>
                     </section>
 
                     <!-- AddThis Button -->
@@ -481,7 +449,7 @@
                     </section>
 
                     <!-- Social media links -->
-                    <ul class="social-media-links">
+                    <!-- <ul class="social-media-links">
 
                         <li>
                             <a class="fa fa-twitter tw" href="#fakelinks"></a>
@@ -493,7 +461,7 @@
                             <a class="fa fa-pinterest pn" href="#fakelinks"></a>
                         </li>
 
-                    </ul>
+                    </ul> -->
                     <!-- /.social-media-links -->
 
                 </div>
