--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <!-- <a class="link link--nukun">To <span>be</span> continue</a> -->
 
                         <a class="link link--yaku" href="#">
-                					<span>To&nbsp</span><span>be&nbsp</span><span>Continue</span>
+                					<span>To&nbsp</span><span>be&nbsp</span><span>Continued</span>
                 				</a>
                     </div>
 
