--- a/index.html
+++ b/index.html
@@ -187,9 +187,10 @@
 
                     <!-- Description -->
                     <div class="desc">
+                        <p>Name:谭润泽</p>
                         <p>From: NEU (东北大学) 辽宁∙沈阳</p>
-                        <p>Major: Software Engineering</p>
-                        <p>GPA: 3.1 / 4.0</p>
+                        <p>Major: Software Engineering（大三）</p>
+                        <p>GPA: 3.1 / 4.0</p>                        
 
                     </div>
 
