--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                         </div>
 
                         <div class="nav">
-                          
+
                             <div class="socialclick">
                                 <ul>
                                     <li class="">
-                                        <a href="resume.html" target="_blank">
+                                        <a href="ResumeFile/resume.html" target="_blank">
                                             <button type="button" class="btn btn-default btn-sm"><i class="fa fa-file-pdf-o"></i>&nbsp&nbspRESUME</button>
                                         </a>
                                     </li>
