--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <!--Logo -->
                         <figure class="text-center">
                             <a href="./index.html">
-                                <img id="front" class="img-logo" src="images/wyshot.JPG" alt="">
+                                <img id="front" class="img-logo" src="images/alpha.jpg" alt="">
                             </a>
                         </figure>
 
@@ -87,7 +87,7 @@
                         <div class="front">
                             <h1 id="name" style="z-index:1;">Terence Tan</h1>
                             <!-- Sub title -->
-                            <p id="lyric">Don't let your dreams be dreams</p>
+                            <p id="lyric">Hello Wrold !</p>
                         </div>
 
                         <div class="nav">
