--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="front">
                             <h1 id="name" style="z-index:1;">Terence Tan</h1>
                             <!-- Sub title -->
-                            <p id="lyric">Hello Wrold !</p>
+                            <p id="lyric">Hello World !</p>
                         </div>
 
                         <div class="nav">
