--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
 
     <!-- Subscribe -->
-    <section class="subscribe-section" id="section-3">
+    <!-- <section class="subscribe-section" id="section-3">
 
         <div class="container">
 
@@ -369,7 +369,6 @@
 
                 <div class="col-md-12">
                     <div class="subscribe_link">
-                        <!-- <a class="link link--nukun">To <span>be</span> continue</a> -->
 
                         <a class="link link--yaku" href="#">
                             <span>To&nbsp</span><span>be&nbsp</span><span>Continued</span>
@@ -378,16 +377,13 @@
 
 
                 </div>
-                <!-- /.col-md-12 -->
+
 
             </div>
-            <!-- /.row -->
 
         </div>
-        <!-- /.container -->
 
-    </section>
-    <!-- /.subscribe-section -->
+    </section> -->
 
 
 
