--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         </a>
                                     </li>
                                     <li class="">
-                                        <a href="https://github.com/Terence95/Terence95.github.io/issues" target="_blank">
+                                        <a href="index-blog.html" target="_blank">
                                             <button type="button" class="btn btn-default btn-sm"><i class="fa fa-book"></i>&nbsp&nbspBLOG</button>
                                         </a>
                                     </li>
