--- a/index.html
+++ b/index.html
@@ -144,33 +144,21 @@
 
 
     <!-- Services -->
-    <section class="services-section" id="section-1">
+    <!-- <section class="services-section" id="section-1">
 
         <div class="container">
 
             <div class="row">
 
                 <div class="col-md-4 col-services">
-
-                    <!-- Icons -->
                     <figure>
-                        <!-- <img class="img-services" src="images/icons/flag.png" alt=""> -->
-                        <!-- <h3 class="title">About Me</h3> -->
                         <div class="link_intro">
                             <a class="link link--kukuri" href="javascript:" data-letters="About Me">About Me</a>
                         </div>
 
-                        <!-- <div class="">
-                            <button class="button button--itzel button--text-thick"><i class="button__icon icon icon-cart"></i><span>Express Checkout</span></button>
-                        </div> -->
-
                         <hr class="intro-divider"></hr>
                     </figure>
 
-
-
-
-                    <!-- Description -->
                     <div class="desc">
                         <p>Name: 谭润泽</p>
                         <p>From: NEU (东北大学) 辽宁∙沈阳</p>
@@ -178,26 +166,16 @@
                         <p>GPA: 3.1 / 4.0</p>
 
                     </div>
-
-
                 </div>
-                <!-- /.col-md-4 -->
 
                 <div class="col-md-4 col-services">
-
-                    <!-- Icons -->
                     <figure>
-                        <!-- <img class="img-services" src="images/icons/search.png" alt=""> -->
-                        <!-- <h3 class="title">Skills</h3> -->
                         <div class="link_intro">
                             <a class="link link--kukuri" href="javascript:" data-letters="skills">skills</a>
                         </div>
                         <hr class="intro-divider"></hr>
                     </figure>
 
-
-
-                    <!-- Description -->
                     <div class="desc">
                         <p>HTML5 | CSS | Javascript</i>
                         </p>
@@ -209,21 +187,13 @@
 
 
                 </div>
-                <!-- /.col-md-4 -->
-
                 <div class="col-md-4 col-services">
-
-                    <!-- Icons -->
                     <figure>
-                        <!-- <img class="img-services img-margin" src="images/icons/world-map.png" alt=""> -->
-                        <!-- <h3 class="title">Contact Me</h3> -->
                         <div class="link_intro">
                             <a class="link link--kukuri" href="javascript:" data-letters="Contact">Contact</a>
                         </div>
                         <hr class="intro-divider"></hr>
                     </figure>
-
-                    <!-- Description -->
                     <div class="desc">
                         <p><i class="fa fa-envelope"></i> | Email：651789712@qq.com</p>
                         <p><i class="fa fa-phone"></i> | TEL： 86-18689277304</p>
@@ -231,9 +201,7 @@
 
                     </div>
                 </div>
-                <!-- /.col-md-4 -->
-
-            </div>
+            </div> -->
             <!-- /.row -->
 
         </div>
