--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 
                             <div class="socialclick">
                                 <ul>
-                                    <li class="">
+                                    <!-- <li class="">
                                         <a href="ResumeFile/resume.html" target="_blank">
                                             <button type="button" class="btn btn-default btn-sm"><i class="fa fa-file-pdf-o"></i>&nbsp&nbspRESUME</button>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li class="">
                                         <a href="https://github.com/Terence95" target="_blank">
                                             <button type="button" class="btn btn-default btn-sm"><i class="fa fa-github"></i>&nbsp&nbspGITHUB</button>
